--- a/src/InOneWeekend/InOneWeekend.vcxproj
+++ b/src/InOneWeekend/InOneWeekend.vcxproj
@@ -110,6 +110,7 @@
     <ClInclude Include="hittable_list.h" />
     <ClInclude Include="material.h" />
     <ClInclude Include="sphere.h" />
+    <ClInclude Include="triangle.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
